# SecureCrypt

./: CMakeLists.txt  README.md
include/: aes_cryptage.h  crypteur.h  decrypteur.h  interface.h
src/: crypteur.cpp  decrypteur.cpp  main.cpp
